lib/bait/tests/inout_error/bad_toplevel.in.bt
package mypkg

x := 123
